Tue Jul 11 22:20:14 UTC 2006  Steve Huston  <shuston@riverace.com>

        * bin/generate_doxygen.pl: Add the ability to put the generated
          HTML output in a specified location using the new -html_output
          command line option. It alters the path specified for the
          HTML_OUTPUT and GENERATE_TAGFILE Doxygen options.

Tue Jul 11 22:09:56 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_linux.GNU: Added support for the
          "buildbits=64" and "buildbits=32" make settings to target
          32- and 64-bit build targets, respectively. Thanks to Boris
          Kaminer <boris dor kaminer at gmail dot com> for this addition.

Tue Jul 11 22:22:04 UTC 2006  Steve Huston  <shuston@riverace.com>

        * configure.ac: Change the minimum automake version to 1.9.6; this is
          required to generate Makefiles that work properly on AIX.

        * m4/compiler.m4: For AIX, replace ACE_AIX_MAJOR_VERS and
          ACE_AIX_MINOR_VERS compile macros with ACE_AIX_VERS as the
          hand-edited platform_aix_ibm.GNU has and the code expects.
          Also removed the AIX 3 and 4 code since AIX 3 and 4 are no longer
          supported. Also, turned on -qtemplateregistry for xlC-type
          compilers (Visual Age C++ 6 and XL C++ 7).

Tue Jul 11 21:37:51 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdio.cpp (snprintf, sprintf): In the wchar versions,
          adjust the preprocessor checks to pick up the way that Solaris
          indicates the presence of XPG5 capability. Allows these functions
          to work, which allows ACE_Log_Msg to work also.

        * ace/OS_NS_unistd.{h inl} (ualarm): Changed u_long arguments and
          return value to useconds_t to gain portability.

        * ace/OS_NS_dirent.{h inl cpp}: Made the selector and comparator
          function pointer arguments to ACE_OS::scandir() and